# DIR-615

./: README.md
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/: ChangeLog  Makefile.am  Makefile.in  RELEASE.NOTES  config.h.in  configure  configure.in  mkinstalldirs  snort.8  verstuff.pl
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/contrib/: Makefile.am
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/doc/: CREDITS  Makefile.am  Makefile.in  PROBLEMS  README  README.FLEXRESP2  README.UNSOCK  README.WIN32  README.csv  README.dcerpc  README.flow-portscan  README.frag3  README.ftptelnet  README.http_inspect  README.sfportscan  README.stream4  README.stream5  TODO  USAGE  WISHLIST  faq.tex  snort_manual.tex
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/etc/: Makefile.am  classification.config  reference.config  snort.conf
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/m4/: Makefile.am
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/preproc_rules/: Makefile.am  decoder.rules  preprocessor.rules
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/rpm/: Makefile.am  README.build_rpms  README.rpms  generate-all-rpms  snort.logrotate  snort.spec  snort.sysconfig  snortd
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/schemas/: Makefile.am
GPL_Source_Code/src/AthSDK/apps/snort-2.8.2.2/src/: Makefile.am  bounds.h  build.h  byte_extract.c  cdefs.h  checksum.h  codes.c  codes.h  cpuclock.h  debug.c  debug.h  decode.c  decode.h  detect.c  detect.h  event.h  event_queue.c  event_wrapper.c  fatal.h  fpcreate.c  fpcreate.h  fpdetect.c  fpdetect.h  generators.h  inline.c  inline.h  (+44 more)
(+6205 files in other folders)
